# cleaner

./: .dockerignore  Cargo.toml  Dockerfile  NOTICE  README.md  cleaner.toml.example  plan.txt
.github/workflows/: build.yml  manual-performance.yml  manual-tests.yml  release.yml
src/: config.rs  deleter.rs  main.rs  patterns.rs  pool.rs  scanner.rs  stats.rs  test_support.rs
src/fastwalk/: linux.rs  mac.rs  mod.rs
src/tui/: app.rs  events.rs  index.rs  mod.rs  tree.rs  ui.rs
tests/: cli.rs
tools/: create_fixtures.rs
