[package]
name = "cleaner"
version = "0.0.7"
edition = "2021"
description = "High-performance folder cleaner for development temp files"
license = "Apache-2.0"

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive"] }

# Data parallelism for deletions
rayon = "1.12"

# Lock-free channels for producer-consumer
crossbeam-channel = "0.5"

# SIMD-accelerated byte searching
memchr = "2"

# Progress indicators
indicatif = "0.18"

# Human-readable byte sizes
humansize = "2"

# Colored terminal output
colored = "3"

# CPU detection
num_cpus = "1.17"

# Config parsing
serde = { version = "1", features = ["derive"] }
toml = "1.1"

# Home directory detection
dirs = "6"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# System API access
libc = "0.2"

# High-performance allocator
mimalloc = { version = "0.1", default-features = false }

# Linux and FreeBSD file descriptor APIs
[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
rustix = { version = "0.38", features = ["fs"] }


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release.build-override]
opt-level = 3
